@@ -8,6 +8,7 @@ import cn.lypi.contracts.tui.DiffView;
 import cn.lypi.contracts.tui.GitDiffFileView;
 import cn.lypi.contracts.tui.GitDiffStatus;
 import cn.lypi.contracts.tui.StatusBarState;
+import cn.lypi.contracts.tui.TuiBlock;
 import cn.lypi.contracts.security.PermissionOption;
 import cn.lypi.contracts.security.PermissionOptionKind;
 import cn.lypi.contracts.security.PermissionBehavior;
@@ -31,20 +32,169 @@ class TuiRendererTest {
     private static final String INPUT_BACKGROUND = "\033[48;5;236m";
     private static final String INPUT_CURSOR = "\033[38;5;81m|\033[39m";
     private static final String ANSI_RESET = "\033[0m";
+    private static final String STATUS_CWD = "~/workspace";
 
     @Test
-    void rendersLinearTranscriptStatusAndInput() {
+    void rendersCommittedBlocksAsStandaloneHistoryLines() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(2);
+
+        List<String> history = renderer.renderCommittedBlocks(
+            List.of(new TuiMessageBlock("a1", "m1", "assistant", "final", false)),
+            80
+        ).stream().map(TerminalLine::text).toList();
+
+        assertEquals(List.of("final"), history);
+    }
+
+    @Test
+    void mutableSurfaceExcludesStableHistoryAndFitsBoundedHeight() {
+        TuiRenderer renderer = new TuiRenderer();
+        TuiMessageBlock stable = new TuiMessageBlock(
+            "stable", "m1", "assistant", "stable history", false
+        );
+        TuiMessageBlock streaming = new TuiMessageBlock(
+            "streaming", "m2", "assistant", "streaming", true
+        );
         TuiViewModel view = new TuiViewModel(
-            List.of(new TuiMessageBlock("b1", "m1", "assistant", "hello world", false)),
-            new StatusBarState("ses_1", "gpt-5.4", "execute", "tool:running"),
+            List.of(stable, streaming),
+            statusBar("ses_1", "gpt-5.4", "running", "default"),
             List.of(),
             Optional.empty(),
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(12, 5), "draft");
+        TuiRenderFrame surface = renderer.renderSurface(
+            view,
+            List.of(streaming),
+            new TuiLayout(80, 12),
+            "draft",
+            5,
+            List.of(),
+            false
+        );
+
+        assertFalse(surface.lines().stream().anyMatch(line -> line.contains("stable history")));
+        assertTrue(surface.lines().stream().anyMatch(line -> line.contains("streaming")));
+        assertTrue(surface.lines().stream().anyMatch(line -> line.contains("> draft")));
+        assertTrue(surface.lines().getLast().contains(STATUS_CWD));
+        assertTrue(surface.lines().size() <= 11);
+    }
+
+    @Test
+    void mutableSurfaceKeepsOverlaysDiffAndSingleStatusLineVisible() {
+        PermissionPromptView prompt = new PermissionPromptView(
+            "perm_1",
+            "toolu_1",
+            "Need approval",
+            "bash:mvn test",
+            "allow_once",
+            "cancel",
+            List.of(
+                new PermissionOption(
+                    "allow_once", PermissionOptionKind.ALLOW_ONCE, "Allow", "", Optional.empty(), Map.of()
+                ),
+                new PermissionOption(
+                    "cancel", PermissionOptionKind.CANCEL, "Cancel", "", Optional.empty(), Map.of()
+                )
+            ),
+            "cancel"
+        );
+        TuiViewModel view = new TuiViewModel(
+            List.of(),
+            statusBar("ses_1", "gpt-5.4", "execute", "default"),
+            List.of(),
+            Optional.of(prompt),
+            Optional.of(new DiffView(
+                "1 file changed",
+                List.of(new GitDiffFileView(
+                    Path.of("src/App.java"), GitDiffStatus.MODIFIED, "Modified", Map.of()
+                )),
+                "+new line",
+                false,
+                Map.of()
+            ))
+        );
+
+        TuiRenderFrame surface = new TuiRenderer().renderSurface(
+            view,
+            List.of(),
+            new TuiLayout(80, 24),
+            "/",
+            1,
+            List.of("  slash: /model", "  skill: @review", "> resume: ses_2"),
+            false
+        );
+        String rendered = String.join("\n", surface.lines());
+
+        assertTrue(rendered.contains("permission toolu_1: Need approval"));
+        assertTrue(rendered.contains("> Cancel"));
+        assertTrue(rendered.contains("slash: /model"));
+        assertTrue(rendered.contains("skill: @review"));
+        assertTrue(rendered.contains("> resume: ses_2"));
+        assertTrue(rendered.contains("diff: 1 file changed"));
+        assertEquals(1, surface.lines().stream().filter(line -> line.contains(STATUS_CWD)).count());
+        assertTrue(surface.lines().getLast().contains(STATUS_CWD));
+    }
+
+    @Test
+    void toolExpansionChangesOnlyLiveRegion() {
+        TuiRenderer renderer = new TuiRenderer();
+        TuiViewModel view = new TuiViewModel(
+            List.of(
+                new TuiToolBlock(
+                    "history-tool",
+                    "message-history",
+                    "use-history",
+                    "custom_tool",
+                    TuiToolState.DONE,
+                    "completed",
+                    "history detail 1\nhistory detail 2\nhistory detail 3\nhistory detail 4\nhistory detail 5",
+                    false
+                ),
+                new TuiToolBlock(
+                    "live-tool",
+                    "message-live",
+                    "use-live",
+                    "custom_tool",
+                    TuiToolState.RUNNING,
+                    "active",
+                    String.join("\n", java.util.stream.IntStream.rangeClosed(1, 20)
+                        .mapToObj(index -> "live detail " + index)
+                        .toList()),
+                    true
+                )
+            ),
+            statusBar("ses_1", "gpt-5.4", "running", "default"),
+            List.of(),
+            Optional.empty(),
+            Optional.empty()
+        );
+
+        TuiTranscriptPartition partition = new TuiTranscriptPartitioner().partition(view.blocks());
+        List<TerminalLine> history = renderer.renderCommittedBlocks(partition.history(), 60);
+        List<String> collapsed = renderer.renderSurface(
+            view, partition.live(), new TuiLayout(60, 14), "", -1, List.of(), false
+        ).lines();
+        List<String> expanded = renderer.renderSurface(
+            view, partition.live(), new TuiLayout(60, 14), "", -1, List.of(), true
+        ).lines();
+
+        assertTrue(history.stream().anyMatch(line -> line.text().contains("history detail")));
+        assertFalse(collapsed.equals(expanded));
+    }
+
+    @Test
+    void rendersLinearTranscriptStatusAndInput() {
+        TuiRenderer renderer = new TuiRenderer();
+        TuiViewModel view = new TuiViewModel(
+            List.of(new TuiMessageBlock("b1", "m1", "assistant", "hello world", false)),
+            statusBar("ses_1", "gpt-5.4", "execute", "tool:running"),
+            List.of(),
+            Optional.empty(),
+            Optional.empty()
+        );
+
+        List<String> lines = render(renderer, view, new TuiLayout(12, 5), "draft");
 
         assertEquals(5, lines.size());
         assertEquals("hello world", lines.get(0));
@@ -57,34 +207,32 @@ class TuiRendererTest {
     @Test
     void statusBarPreservesToolOnNarrowWidth() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(1);
         TuiViewModel view = new TuiViewModel(
             List.of(),
-            new StatusBarState("session-long", "very-long-model", "execute", "tool:running"),
+            statusBar("session-long", "very-long-model", "execute", "tool:running"),
             List.of(),
             Optional.empty(),
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(10, 3), "");
+        List<String> lines = render(renderer, view, new TuiLayout(10, 3), "");
 
         assertTrue(lines.getLast().contains("tool"));
     }
 
     @Test
-    void statusBarWithApprovalProjectionTruncatesOnNarrowWidth() {
+    void statusBarDoesNotRenderApprovalProjectionAndFitsNarrowWidth() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(1);
         TuiViewModel view = new TuiViewModel(
             List.of(),
             new StatusBarState(
                 "ses_1",
                 "gpt-5.4",
                 "EXECUTE",
-                "DEFAULT_EXECUTE",
+                "ASK",
                 "ON_REQUEST",
                 ":workspace",
-                "",
+                STATUS_CWD,
                 "",
                 "",
                 false
@@ -94,45 +242,28 @@ class TuiRendererTest {
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(20, 3), "");
+        List<String> wideLines = render(renderer, view, new TuiLayout(120, 3), "");
+        List<String> narrowLines = render(renderer, view, new TuiLayout(20, 3), "");
 
-        assertTrue(AnsiWidth.displayWidth(lines.getLast()) <= 20);
-        assertFalse(lines.getLast().contains("\n"));
+        assertEquals(STATUS_CWD + " gpt-5.4 EXECUTE ASK", wideLines.getLast());
+        assertFalse(wideLines.getLast().contains("ses_1"));
+        assertFalse(wideLines.getLast().contains("ON_REQUEST"));
+        assertFalse(wideLines.getLast().contains(":workspace"));
+        assertTrue(AnsiWidth.displayWidth(narrowLines.getLast()) <= 20);
+        assertFalse(narrowLines.getLast().contains("\n"));
     }
 
     @Test
-    void statusBarDoesNotRenderApplicationScrollbackCounter() {
+    void statusBarRendersWorkingDirectoryInsteadOfSessionId() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(1);
-        screen.setTranscript(List.of("old", "current"));
-        TuiViewModel view = new TuiViewModel(
-            List.of(
-                new TuiMessageBlock("b1", "m1", "assistant", "old", false),
-                new TuiMessageBlock("b2", "m2", "assistant", "current", false)
-            ),
-            new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
-            List.of(),
-            Optional.empty(),
-            Optional.empty()
-        );
-
-        List<String> lines = renderer.render(view, screen, new TuiLayout(80, 3), "");
-
-        assertFalse(lines.getLast().contains("scroll +"));
-    }
-
-    @Test
-    void statusBarDoesNotRenderInternalRuntimeFields() {
-        TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(1);
         TuiViewModel view = new TuiViewModel(
             List.of(),
             new StatusBarState(
                 "ses_1",
                 "gpt-5.4",
                 "EXECUTE",
-                "DEFAULT_EXECUTE",
-                "long-project-name",
+                "ASK",
+                "~/src/study/ly-pi",
                 "leaf_1234567890",
                 "1234/200000tok",
                 true
@@ -142,9 +273,10 @@ class TuiRendererTest {
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(120, 3), "");
+        List<String> lines = render(renderer, view, new TuiLayout(120, 3), "");
 
-        assertEquals("ses_1 gpt-5.4 EXECUTE DEFAULT_EXECUTE", lines.getLast());
+        assertEquals("~/src/study/ly-pi gpt-5.4 EXECUTE ASK", lines.getLast());
+        assertFalse(lines.getLast().contains("ses_1"));
         assertFalse(lines.getLast().contains("cwd:"));
         assertFalse(lines.getLast().contains("leaf:"));
         assertFalse(lines.getLast().contains("ctx:"));
@@ -154,16 +286,15 @@ class TuiRendererTest {
     @Test
     void messageBlocksUseMarkdownRenderer() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(2);
         TuiViewModel view = new TuiViewModel(
             List.of(new TuiMessageBlock("b1", "m1", "assistant", "## Done ##\n- [x] task", false)),
-            new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
+            statusBar("ses_1", "gpt-5.4", "execute", "default"),
             List.of(),
             Optional.empty(),
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(20, 6), "");
+        List<String> lines = render(renderer, view, new TuiLayout(20, 6), "");
 
         assertEquals("Done", lines.get(0));
         assertEquals("[x] task", lines.get(1));
@@ -172,20 +303,19 @@ class TuiRendererTest {
     @Test
     void rendersUserAndThinkingBlocksWithRoleStyles() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(3);
         TuiViewModel view = new TuiViewModel(
             List.of(
                 new TuiMessageBlock("u1", "m1", "user", "请修复 TUI", false),
                 new TuiThinkingBlock("t1", "m2", "分析路径", false, false),
                 new TuiMessageBlock("a1", "m2", "assistant", "已处理", false)
             ),
-            new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
+            statusBar("ses_1", "gpt-5.4", "execute", "default"),
             List.of(),
             Optional.empty(),
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(40, 7), "");
+        List<String> lines = render(renderer, view, new TuiLayout(40, 7), "");
 
         assertEquals("\033[38;5;81muser: 请修复 TUI\033[0m", lines.get(0));
         assertEquals("\033[38;5;244mthinking: 分析路径\033[0m", lines.get(1));
@@ -193,18 +323,51 @@ class TuiRendererTest {
     }
 
     @Test
+    void rendersPendingSteeringWithDistinctDimStyle() {
+        TuiRenderer renderer = new TuiRenderer();
+        TuiMessageBlock block = new TuiMessageBlock(
+            "pending-steering:0",
+            "pending-steering:0",
+            "steering",
+            "line one\nline two",
+            true
+        );
+
+        List<String> lines = renderer.renderTranscriptBlocks(List.of(block), 40, false, Integer.MAX_VALUE);
+
+        assertEquals("\033[2;38;5;245msteering: line one\033[0m", lines.getFirst());
+        assertEquals("\033[2;38;5;245m          line two\033[0m", lines.get(1));
+        assertTrue(lines.stream().noneMatch(line -> line.contains("\n")));
+        assertFalse(lines.getFirst().startsWith("\033[38;5;81m"));
+
+        List<String> narrow = renderer.renderTranscriptBlocks(
+            List.of(new TuiMessageBlock(
+                "pending-steering:1",
+                "pending-steering:1",
+                "steering",
+                "averylongword\nline two",
+                true
+            )),
+            8,
+            false,
+            Integer.MAX_VALUE
+        );
+        assertTrue(narrow.stream().noneMatch(line -> line.contains("\n")));
+        assertTrue(narrow.stream().allMatch(line -> AnsiWidth.displayWidth(line) <= 8));
+    }
+
+    @Test
     void rendersMultilineThinkingWithoutEmbeddedNewlines() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(2);
         TuiViewModel view = new TuiViewModel(
             List.of(new TuiThinkingBlock("t1", "m1", "第一行\n第二行", false, false)),
-            new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
+            statusBar("ses_1", "gpt-5.4", "execute", "default"),
             List.of(),
             Optional.empty(),
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(40, 6), "");
+        List<String> lines = render(renderer, view, new TuiLayout(40, 6), "");
 
         assertEquals("\033[38;5;244mthinking: 第一行\033[0m", lines.get(0));
         assertEquals("\033[38;5;244m          第二行\033[0m", lines.get(1));
@@ -213,16 +376,15 @@ class TuiRendererTest {
     @Test
     void compressesThinkingDisplayAndShowsHiddenLineCount() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(4);
         TuiViewModel view = new TuiViewModel(
             List.of(new TuiThinkingBlock("t1", "m1", "第一行\n第二行\n第三行\n第四行\n第五行", false, false)),
-            new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
+            statusBar("ses_1", "gpt-5.4", "execute", "default"),
             List.of(),
             Optional.empty(),
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(40, 8), "");
+        List<String> lines = render(renderer, view, new TuiLayout(40, 8), "");
 
         assertEquals("\033[38;5;244mthinking: 第一行\033[0m", lines.get(0));
         assertEquals("\033[38;5;244m          第二行\033[0m", lines.get(1));
@@ -235,16 +397,15 @@ class TuiRendererTest {
     @Test
     void inputLineMarksHardwareCursorAtEditorCursor() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(1);
         TuiViewModel view = new TuiViewModel(
             List.of(),
-            new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
+            statusBar("ses_1", "gpt-5.4", "execute", "default"),
             List.of(),
             Optional.empty(),
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(30, 3), "alpha beta", 6);
+        List<String> lines = render(renderer, view, new TuiLayout(30, 4), "alpha beta", 6);
 
         assertInputBorder(lines.get(0), 30);
         assertInputContent(lines.get(lines.size() - 2), "> alpha |CURSOR|" + INPUT_CURSOR + "beta");
@@ -253,38 +414,36 @@ class TuiRendererTest {
     @Test
     void emptyTranscriptRendersInputBlockAndStatusOnly() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(1);
         TuiViewModel view = new TuiViewModel(
             List.of(),
-            new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
+            statusBar("ses_1", "gpt-5.4", "execute", "default"),
             List.of(),
             Optional.empty(),
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(20, 6), "", 0);
+        List<String> lines = render(renderer, view, new TuiLayout(20, 6), "", 0);
 
         assertEquals(4, lines.size());
         assertInputBorder(lines.get(0), 20);
         assertInputContent(lines.get(1), "> |CURSOR|" + INPUT_CURSOR);
         assertInputBorder(lines.get(2), 20);
-        assertTrue(lines.get(3).contains("ses_1"));
+        assertTrue(lines.get(3).contains(STATUS_CWD));
     }
 
     @Test
     void compactRuntimeUsesSingleReadonlyInputLineWithoutCursorBackgroundBlock() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(1);
         TuiViewModel view = new TuiViewModel(
             List.of(),
-            new StatusBarState("ses_1", "gpt-5.4-mini", "running", "DEFAULT_EXECUTE"),
+            statusBar("ses_1", "gpt-5.4-mini", "running", "ASK"),
             "compacting MANUAL",
             List.of(),
             Optional.empty(),
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(40, 8), "draft", 5);
+        List<String> lines = render(renderer, view, new TuiLayout(40, 8), "draft", 5);
         String frame = String.join("\n", lines);
 
         assertTrue(frame.contains("compact"));
@@ -295,45 +454,42 @@ class TuiRendererTest {
     @Test
     void inputLineKeepsCursorMarkerAfterNarrowWrapping() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(1);
         TuiViewModel view = new TuiViewModel(
             List.of(),
-            new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
+            statusBar("ses_1", "gpt-5.4", "execute", "default"),
             List.of(),
             Optional.empty(),
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(8, 3), "abcdefgh", 8);
+        List<String> lines = render(renderer, view, new TuiLayout(8, 3), "abcdefgh", 8);
 
-        assertEquals(3, lines.size());
-        assertInputBorder(lines.get(0), 8);
-        assertInputContent(lines.get(lines.size() - 2), "fgh|CURSOR|" + INPUT_CURSOR);
+        assertEquals(2, lines.size());
+        assertInputContent(lines.getFirst(), "fgh|CURSOR|" + INPUT_CURSOR);
+        assertEquals(AnsiWidth.truncate(STATUS_CWD, 8), lines.getLast());
     }
 
     @Test
     void visibleCursorDoesNotPushInputContentPastLayoutWidth() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(1);
         TuiViewModel view = new TuiViewModel(
             List.of(),
-            new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
+            statusBar("ses_1", "gpt-5.4", "execute", "default"),
             List.of(),
             Optional.empty(),
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(8, 4), "abcdef", 6);
+        List<String> lines = render(renderer, view, new TuiLayout(8, 4), "abcdef", 6);
 
         for (String line : lines) {
-            assertTrue(AnsiWidth.displayWidth(line.replace(TerminalFrameRenderer.CURSOR_MARKER, "")) <= 8);
+            assertTrue(AnsiWidth.displayWidth(line.replace(TuiRenderFrame.CURSOR_MARKER, "")) <= 8);
         }
     }
 
     @Test
-    void longInputSoftWrapsInsideBottomInputBlockWithFullTranscript() {
+    void longInputIsWindowedWithoutChangingCommittedHistory() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(1);
         TuiViewModel view = new TuiViewModel(
             List.of(
                 new TuiMessageBlock("b1", "m1", "assistant", "line1", false),
@@ -341,96 +497,94 @@ class TuiRendererTest {
                 new TuiMessageBlock("b3", "m3", "assistant", "line3", false),
                 new TuiMessageBlock("b4", "m4", "assistant", "line4", false)
             ),
-            new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
+            statusBar("ses_1", "gpt-5.4", "execute", "default"),
             List.of(),
             Optional.empty(),
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(8, 6), "abcdefghij", 10);
+        TuiTranscriptPartition partition = new TuiTranscriptPartitioner().partition(view.blocks());
+        List<String> history = renderer.renderCommittedBlocks(partition.history(), 8).stream()
+            .map(TerminalLine::text)
+            .toList();
+        TuiRenderFrame surface = renderer.renderSurface(
+            view, partition.live(), new TuiLayout(8, 6), "abcdefghij", 10, List.of(), false
+        );
 
-        assertEquals(9, lines.size());
-        assertEquals("line1", lines.get(0));
-        assertEquals("line2", lines.get(1));
-        assertEquals("line3", lines.get(2));
-        assertEquals("line4", lines.get(3));
-        assertInputBorder(lines.get(lines.size() - 5), 8);
-        assertEquals("\033[48;5;236m> abcde\033[0m", lines.get(lines.size() - 4));
-        assertEquals("\033[48;5;236mfghij|CURSOR|" + INPUT_CURSOR + "\033[0m", lines.get(lines.size() - 3));
-        assertInputBorder(lines.get(lines.size() - 2), 8);
-        assertTrue(lines.getLast().contains("ses_1"));
+        assertEquals(List.of("line1", "line2", "line3", "line4"), history);
+        assertTrue(surface.lines().size() <= 5);
+        assertTrue(surface.lines().stream().anyMatch(line -> line.contains(TuiRenderFrame.CURSOR_MARKER)));
     }
 
     @Test
     void explicitNewlineStartsNewInputRowWithoutSplittingDraftSemantics() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(1);
         TuiViewModel view = new TuiViewModel(
             List.of(),
-            new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
+            statusBar("ses_1", "gpt-5.4", "execute", "default"),
             List.of(),
             Optional.empty(),
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(12, 5), "hello\nworld", 11);
+        List<String> lines = render(renderer, view, new TuiLayout(12, 6), "hello\nworld", 11);
 
         assertEquals(5, lines.size());
         assertInputBorder(lines.get(0), 12);
         assertEquals("\033[48;5;236m> hello\033[0m", lines.get(1));
         assertEquals("\033[48;5;236mworld|CURSOR|" + INPUT_CURSOR + "\033[0m", lines.get(2));
         assertInputBorder(lines.get(3), 12);
-        assertTrue(lines.get(4).contains("ses_1"));
+        assertTrue(lines.get(4).contains(STATUS_CWD));
     }
 
     @Test
-    void inputViewportShowsLatestRowsWhileKeepingFullTranscript() {
+    void inputViewportShowsCursorRowsWhileKeepingOneTranscriptLine() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(1);
         TuiViewModel view = new TuiViewModel(
             List.of(new TuiMessageBlock("b1", "m1", "assistant", "history", false)),
-            new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
+            statusBar("ses_1", "gpt-5.4", "execute", "default"),
             List.of(),
             Optional.empty(),
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(10, 6), "one\ntwo\nthree\nfour", 18);
+        List<String> lines = render(renderer, view, new TuiLayout(10, 6), "one\ntwo\nthree\nfour", 18);
 
-        assertEquals(7, lines.size());
+        assertTrue(lines.size() <= 6);
         assertTrue(lines.contains("history"));
-        assertInputBorder(lines.get(lines.size() - 6), 10);
-        assertEquals("\033[48;5;236mtwo\033[0m", lines.get(lines.size() - 5));
-        assertEquals("\033[48;5;236mthree\033[0m", lines.get(lines.size() - 4));
-        assertEquals("\033[48;5;236mfour|CURSOR|" + INPUT_CURSOR + "\033[0m", lines.get(lines.size() - 3));
-        assertInputBorder(lines.get(lines.size() - 2), 10);
+        assertFalse(lines.stream().anyMatch(line -> line.contains("two")));
+        assertTrue(lines.stream().anyMatch(line -> line.contains("three")));
+        assertTrue(lines.stream().anyMatch(line -> line.contains("four")
+            && line.contains(TuiRenderFrame.CURSOR_MARKER)));
     }
 
     @Test
-    void inputBlockCanUseFullTerminalHeightAfterFullTranscript() {
+    void minimumInputSurfaceFitsBesideCommittedHistoryInThreeLineTerminal() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(1);
         TuiViewModel view = new TuiViewModel(
             List.of(new TuiMessageBlock("b1", "m1", "assistant", "history", false)),
-            new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
+            statusBar("ses_1", "gpt-5.4", "execute", "default"),
             List.of(),
             Optional.empty(),
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(10, 3), "one\ntwo\nthree\nfour", 18);
+        TuiTranscriptPartition partition = new TuiTranscriptPartitioner().partition(view.blocks());
+        List<TerminalLine> history = renderer.renderCommittedBlocks(partition.history(), 10);
+        TuiRenderFrame surface = renderer.renderSurface(
+            view, partition.live(), new TuiLayout(10, 3), "one\ntwo\nthree\nfour", 18, List.of(), false
+        );
 
-        assertEquals(4, lines.size());
-        assertTrue(lines.contains("history"));
-        assertInputBorder(lines.get(lines.size() - 3), 10);
-        assertEquals("\033[48;5;236mfour|CURSOR|" + INPUT_CURSOR + "\033[0m", lines.get(lines.size() - 2));
-        assertTrue(lines.getLast().contains("ses_1"));
+        assertEquals(List.of(new TerminalLine("history")), history);
+        assertTrue(surface.lines().size() <= 2);
+        assertTrue(surface.lines().stream().anyMatch(line -> line.contains("four")
+            && line.contains(TuiRenderFrame.CURSOR_MARKER)));
+        assertEquals(AnsiWidth.truncate(STATUS_CWD, 10), surface.lines().getLast());
     }
 
     @Test
     void permissionPromptRendersAsBottomOverlay() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(5);
         PermissionUpdate rememberUpdate = new PermissionUpdate(
             PermissionRuleSource.SESSION,
             new PermissionRule(
@@ -442,7 +596,7 @@ class TuiRendererTest {
         );
         TuiViewModel view = new TuiViewModel(
             List.of(),
-            new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
+            statusBar("ses_1", "gpt-5.4", "execute", "default"),
             List.of(),
             Optional.of(new PermissionPromptView(
                 "perm_toolu_1",
@@ -468,22 +622,20 @@ class TuiRendererTest {
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(40, 9), "");
+        List<String> lines = render(renderer, view, new TuiLayout(40, 9), "");
 
         assertInputBorder(lines.get(0), 40);
         assertInputContent(lines.get(1), "> ");
-        assertInputBorder(lines.get(2), 40);
-        assertEquals("permission toolu_1: Need approval", lines.get(3));
-        assertEquals("rule: bash:npm test", lines.get(4));
-        assertEquals("> 允许一次", lines.get(5));
-        assertEquals("  允许并记住", lines.get(6));
-        assertTrue(lines.getLast().contains("ses_1"));
+        assertEquals("permission toolu_1: Need approval", lines.get(2));
+        assertEquals("rule: bash:npm test", lines.get(3));
+        assertEquals("> 允许一次", lines.get(4));
+        assertEquals("  允许并记住", lines.get(5));
+        assertTrue(lines.getLast().contains(STATUS_CWD));
     }
 
     @Test
-    void permissionPromptStaysVisibleWhenWorkingLineIsActiveInShortViewport() {
+    void permissionPromptTakesPriorityOverWorkingLineInShortViewport() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(2);
         PermissionPromptView prompt = new PermissionPromptView(
             "perm_toolu_1",
             "toolu_1",
@@ -499,27 +651,66 @@ class TuiRendererTest {
         );
         TuiViewModel view = new TuiViewModel(
             List.of(new TuiMessageBlock("b1", "m1", "assistant", "previous", false)),
-            new StatusBarState("ses_1", "gpt-5.4", "running", "default"),
+            statusBar("ses_1", "gpt-5.4", "running", "default"),
             "working (12s)",
             List.of(),
             Optional.of(prompt),
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(40, 6), "");
+        List<String> lines = render(renderer, view, new TuiLayout(40, 6), "");
 
         assertTrue(lines.stream().anyMatch(line -> line.contains("permission toolu_1")));
         assertTrue(lines.stream().anyMatch(line -> line.contains("> 允许一次")));
-        assertTrue(lines.stream().anyMatch(line -> line.contains("working (12s)")));
+        assertFalse(lines.stream().anyMatch(line -> line.contains("working (12s)")));
+    }
+
+    @Test
+    void tallPermissionPromptKeepsSelectedOptionInputCursorAndStatusVisible() {
+        TuiRenderer renderer = new TuiRenderer();
+        List<PermissionOption> options = java.util.stream.IntStream.rangeClosed(1, 8)
+            .mapToObj(index -> new PermissionOption(
+                "option_" + index,
+                PermissionOptionKind.ALLOW_ONCE,
+                "Option " + index,
+                "Description " + index,
+                Optional.empty(),
+                Map.of()
+            ))
+            .toList();
+        PermissionPromptView prompt = new PermissionPromptView(
+            "perm_toolu_1",
+            "toolu_1",
+            "Need approval\nwith a long reason\nthat occupies several rows",
+            "bash:long-running-command",
+            "option_6",
+            "option_8",
+            options,
+            "option_6"
+        );
+        TuiViewModel view = new TuiViewModel(
+            List.of(new TuiMessageBlock("b1", "m1", "assistant", "latest message", false)),
+            statusBar("ses_1", "gpt-5.4", "running", "default"),
+            List.of(),
+            Optional.of(prompt),
+            Optional.empty()
+        );
+
+        List<String> lines = render(renderer, view, new TuiLayout(40, 6), "draft", 5);
+
+        assertTrue(lines.size() <= 6);
+        assertTrue(lines.stream().anyMatch(line -> line.contains("> Option 6")));
+        assertTrue(lines.stream().anyMatch(line -> line.contains(TuiRenderFrame.CURSOR_MARKER)));
+        assertTrue(lines.getLast().contains(STATUS_CWD));
+        assertFalse(lines.stream().anyMatch(line -> line.contains("Option 1")));
     }
 
     @Test
     void multilinePermissionPromptIsSplitIntoFrameLines() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(8);
         TuiViewModel view = new TuiViewModel(
             List.of(),
-            new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
+            statusBar("ses_1", "gpt-5.4", "execute", "default"),
             List.of(),
             Optional.of(new PermissionPromptView(
                 "perm_toolu_1",
@@ -537,7 +728,7 @@ class TuiRendererTest {
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(80, 12), "");
+        List<String> lines = render(renderer, view, new TuiLayout(80, 12), "");
 
         assertTrue(lines.stream().noneMatch(line -> line.contains("\n")));
         int promptStart = lines.indexOf("permission toolu_1: REQUEST_PERMISSIONS");
@@ -552,10 +743,9 @@ class TuiRendererTest {
     @Test
     void diffViewIsRenderedInTranscriptArea() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(4);
         TuiViewModel view = new TuiViewModel(
             List.of(),
-            new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
+            statusBar("ses_1", "gpt-5.4", "execute", "default"),
             List.of(),
             Optional.empty(),
             Optional.of(new DiffView(
@@ -567,7 +757,7 @@ class TuiRendererTest {
             ))
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(40, 8), "");
+        List<String> lines = render(renderer, view, new TuiLayout(40, 9), "");
 
         assertEquals("diff: 1 file changed", lines.get(0));
         assertEquals("M src/App.java", lines.get(1));
@@ -576,61 +766,53 @@ class TuiRendererTest {
     }
 
     @Test
-    void runtimeLineUsesTranscriptSpaceOnlyWhenActive() {
+    void runtimeLineAppearsOnlyInMutableSurface() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(3);
         TuiViewModel view = new TuiViewModel(
             List.of(
                 new TuiMessageBlock("b1", "m1", "assistant", "line1", false),
                 new TuiMessageBlock("b2", "m2", "assistant", "line2", false),
                 new TuiMessageBlock("b3", "m3", "assistant", "line3", false)
             ),
-            new StatusBarState("ses_1", "gpt-5.4", "running", "default"),
+            statusBar("ses_1", "gpt-5.4", "running", "default"),
             "retrying attempt 2 rate limit",
             List.of(),
             Optional.empty(),
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(40, 8), "");
+        List<String> lines = render(renderer, view, new TuiLayout(40, 8), "");
 
-        assertEquals("line1", lines.get(0));
-        assertEquals("line2", lines.get(1));
-        assertEquals("line3", lines.get(2));
+        assertEquals(List.of("line1", "line2", "line3"), lines.subList(0, 3));
         assertEquals("· retrying attempt 2 rate limit", lines.get(3));
         assertInputBorder(lines.get(4), 40);
         assertInputContent(lines.get(5), "> ");
         assertInputBorder(lines.get(6), 40);
-        assertTrue(lines.getLast().contains("ses_1"));
-
-        TuiScreen screenWithoutRuntime = new TuiScreen(3);
+        assertTrue(lines.getLast().contains(STATUS_CWD));
         TuiViewModel withoutRuntime = new TuiViewModel(
             view.blocks(),
-            new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
+            statusBar("ses_1", "gpt-5.4", "execute", "default"),
             List.of(),
             Optional.empty(),
             Optional.empty()
         );
-        List<String> withoutRuntimeLines = renderer.render(withoutRuntime, screenWithoutRuntime, new TuiLayout(40, 8), "");
+        List<String> withoutRuntimeLines = render(renderer, withoutRuntime, new TuiLayout(40, 8), "");
 
-        assertEquals("line1", withoutRuntimeLines.get(0));
-        assertEquals("line2", withoutRuntimeLines.get(1));
-        assertEquals("line3", withoutRuntimeLines.get(2));
+        assertEquals(List.of("line1", "line2", "line3"), withoutRuntimeLines.subList(0, 3));
     }
 
     @Test
     void toolDetailsRenderBelowToolHeader() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(3);
         TuiViewModel view = new TuiViewModel(
             List.of(new TuiToolBlock("tool:1", "msg_1", "toolu_1", "bash", TuiToolState.DONE, "Bash", "stdout: ok\nexit 0", false)),
-            new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
+            statusBar("ses_1", "gpt-5.4", "execute", "default"),
             List.of(),
             Optional.empty(),
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(40, 7), "");
+        List<String> lines = render(renderer, view, new TuiLayout(40, 7), "");
 
         assertEquals("done $ Bash", lines.get(0));
         assertEquals("  stdout: ok", lines.get(1));
@@ -638,9 +820,81 @@ class TuiRendererTest {
     }
 
     @Test
+    void splitsToolRuntimeAndOverlayLogicalLinesIntoPhysicalFrameLines() {
+        TuiRenderer renderer = new TuiRenderer();
+        TuiViewModel view = new TuiViewModel(
+            List.of(new TuiToolBlock(
+                "tool:1",
+                "msg_1",
+                "toolu_1",
+                "bash",
+                TuiToolState.RUNNING,
+                "first\nsecond",
+                "stdout: third\r\nstdout: fourth",
+                true
+            )),
+            statusBar("ses_1", "gpt-5.4", "execute", "default"),
+            "phase one\rphase two",
+            List.of(),
+            Optional.empty(),
+            Optional.empty()
+        );
+
+        TuiRenderFrame frame = renderFrame(
+            renderer,
+            view,
+            new TuiLayout(40, 20),
+            "",
+            0,
+            List.of("overlay one\noverlay two")
+        );
+
+        assertTrue(frame.lines().stream().noneMatch(line -> line.contains("\n") || line.contains("\r")));
+        assertTrue(frame.lines().contains("running $ first"));
+        assertTrue(frame.lines().contains("second"));
+        assertTrue(frame.lines().contains("· phase one"));
+        assertTrue(frame.lines().contains("phase two"));
+        assertTrue(frame.lines().contains("overlay one"));
+        assertTrue(frame.lines().contains("overlay two"));
+    }
+
+    @Test
+    void statusBarNormalizesLogicalLineBreaksWithoutGrowingChrome() {
+        TuiRenderer renderer = new TuiRenderer();
+        TuiViewModel view = new TuiViewModel(
+            List.of(),
+            statusBar("ses_1", "gpt-5.4\r\nmini", "execute", "default"),
+            List.of(),
+            Optional.empty(),
+            Optional.empty()
+        );
+
+        TuiRenderFrame frame = renderFrame(renderer, view, new TuiLayout(40, 8), "", 0);
+
+        assertFalse(frame.lines().getLast().contains("\r"));
+        assertFalse(frame.lines().getLast().contains("\n"));
+        assertTrue(frame.lines().getLast().contains("gpt-5.4 mini"));
+    }
+
+    @Test
+    void narrowToolStatusFallbackAlsoNormalizesLogicalLineBreaks() {
+        TuiRenderer renderer = new TuiRenderer();
+        TuiViewModel view = new TuiViewModel(
+            List.of(),
+            statusBar("session-long", "model-long", "execute", "tool:\nrunning"),
+            List.of(),
+            Optional.empty(),
+            Optional.empty()
+        );
+
+        TuiRenderFrame frame = renderFrame(renderer, view, new TuiLayout(20, 8), "", 0);
+
+        assertEquals("tool tool: running", frame.lines().getLast());
+    }
+
+    @Test
     void bashToolCollapsedShowsCommandStatusSummaryAndTailPreview() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(20);
         TuiViewModel view = new TuiViewModel(
             List.of(new TuiToolBlock(
                 "tool:1",
@@ -652,13 +906,13 @@ class TuiRendererTest {
                 "stdout: line 1\nstdout: line 2\nstdout: line 3\nstdout: line 4\nstdout: line 5\nstdout: line 6\nexit 1\nBUILD FAILURE",
                 false
             )),
-            new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
+            statusBar("ses_1", "gpt-5.4", "execute", "default"),
             List.of(),
             Optional.empty(),
             Optional.empty()
         );
 
-        List<String> lines = renderer.renderFrame(view, screen, new TuiLayout(80, 30), "", -1, List.of(), false).lines();
+        List<String> lines = renderFrame(renderer, view, new TuiLayout(80, 30), "", -1, List.of(), false).lines();
 
         assertTrue(lines.contains("failed $ mvn test"));
         assertTrue(lines.contains("  exit 1"));
@@ -669,20 +923,19 @@ class TuiRendererTest {
     @Test
     void readEditAndUnknownToolsUseStructuredTitles() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(20);
         TuiViewModel view = new TuiViewModel(
             List.of(
                 new TuiToolBlock("tool:read", "msg_1", "toolu_read", "read", TuiToolState.DONE, "src/App.java:1-80", "1 | class App {}\n2 |", false),
                 new TuiToolBlock("tool:edit", "msg_1", "toolu_edit", "edit", TuiToolState.DONE, "src/App.java", "@@ -1 +1 @@\n-old\n+new", false),
                 new TuiToolBlock("tool:custom", "msg_1", "toolu_custom", "custom_tool", TuiToolState.RUNNING, "payload", "{\"key\":\"value\"}", true)
             ),
-            new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
+            statusBar("ses_1", "gpt-5.4", "execute", "default"),
             List.of(),
             Optional.empty(),
             Optional.empty()
         );
 
-        List<String> lines = renderer.renderFrame(view, screen, new TuiLayout(80, 30), "", -1, List.of(), false).lines();
+        List<String> lines = renderFrame(renderer, view, new TuiLayout(80, 30), "", -1, List.of(), false).lines();
 
         assertTrue(lines.contains("tools: read x1 (Ctrl+O details)"));
         assertTrue(lines.contains("done edit src/App.java +1 -1"));
@@ -692,7 +945,6 @@ class TuiRendererTest {
     @Test
     void readToolOutputNeverShowsFileContentAndExpandsToInvocationOnly() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(30);
         TuiViewModel view = new TuiViewModel(
             List.of(new TuiToolBlock(
                 "tool:1",
@@ -706,19 +958,19 @@ class TuiRendererTest {
                     .toList()),
                 false
             )),
-            new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
+            statusBar("ses_1", "gpt-5.4", "execute", "default"),
             List.of(),
             Optional.empty(),
             Optional.empty()
         );
 
-        List<String> collapsed = renderer.renderFrame(view, screen, new TuiLayout(80, 30), "", -1, List.of(), false).lines();
-        List<String> expanded = renderer.renderFrame(view, screen, new TuiLayout(80, 30), "", -1, List.of(), true).lines();
+        List<String> collapsed = renderFrame(renderer, view, new TuiLayout(80, 30), "", -1, List.of(), false).lines();
+        List<String> expanded = renderFrame(renderer, view, new TuiLayout(80, 30), "", -1, List.of(), true).lines();
 
         assertFalse(collapsed.contains("  1 | line 1"));
         assertFalse(collapsed.contains("  11 | line 11"));
         assertTrue(collapsed.contains("tools: read x1 (Ctrl+O details)"));
-        assertTrue(expanded.contains("done read src/Large.java:1-20"));
+        assertEquals(collapsed, expanded);
         assertFalse(expanded.contains("  1 | line 1"));
         assertFalse(expanded.contains("  11 | line 11"));
     }
@@ -726,7 +978,6 @@ class TuiRendererTest {
     @Test
     void writeToolStillShowsContentPreview() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(20);
         TuiViewModel view = new TuiViewModel(
             List.of(new TuiToolBlock(
                 "tool:write",
@@ -738,13 +989,13 @@ class TuiRendererTest {
                 "class App {}\n",
                 false
             )),
-            new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
+            statusBar("ses_1", "gpt-5.4", "execute", "default"),
             List.of(),
             Optional.empty(),
             Optional.empty()
         );
 
-        List<String> lines = renderer.renderFrame(view, screen, new TuiLayout(80, 20), "", -1, List.of(), false).lines();
+        List<String> lines = renderFrame(renderer, view, new TuiLayout(80, 20), "", -1, List.of(), false).lines();
 
         assertTrue(lines.contains("done write src/App.java"));
         assertTrue(lines.contains("  class App {}"));
@@ -753,7 +1004,6 @@ class TuiRendererTest {
     @Test
     void searchToolsCollapseToCountsAndExpandToInvocationOnly() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(20);
         TuiViewModel view = new TuiViewModel(
             List.of(
                 new TuiToolBlock(
@@ -787,20 +1037,22 @@ class TuiRendererTest {
                     true
                 )
             ),
-            new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
+            statusBar("ses_1", "gpt-5.4", "execute", "default"),
             List.of(),
             Optional.empty(),
             Optional.empty()
         );
 
-        List<String> collapsed = renderer.renderFrame(view, screen, new TuiLayout(80, 20), "", -1, List.of(), false).lines();
-        List<String> expanded = renderer.renderFrame(view, screen, new TuiLayout(80, 20), "", -1, List.of(), true).lines();
+        List<String> collapsed = renderFrame(renderer, view, new TuiLayout(80, 20), "", -1, List.of(), false).lines();
+        List<String> expanded = renderFrame(renderer, view, new TuiLayout(80, 20), "", -1, List.of(), true).lines();
 
-        assertTrue(collapsed.contains("tools: glob x1, read x1, grep x1 (Ctrl+O details)"));
+        assertTrue(collapsed.contains("tools: glob x1, read x1 (Ctrl+O details)"));
+        assertTrue(collapsed.contains("tools: grep x1 (Ctrl+O details)"));
         assertFalse(collapsed.contains("  matched AGENTS.md"));
         assertFalse(collapsed.contains("File: AGENTS.md"));
-        assertTrue(expanded.contains("done glob {path=., pattern=**/*}"));
-        assertTrue(expanded.contains("done read AGENTS.md:1-200"));
+        assertTrue(expanded.contains("tools: glob x1, read x1 (Ctrl+O details)"));
+        assertFalse(expanded.contains("done glob {path=., pattern=**/*}"));
+        assertFalse(expanded.contains("done read AGENTS.md:1-200"));
         assertTrue(expanded.contains("running grep {pattern=apiKey, path=.}"));
         assertFalse(expanded.contains("  matched AGENTS.md"));
         assertFalse(expanded.contains("File: AGENTS.md"));
@@ -809,29 +1061,28 @@ class TuiRendererTest {
     @Test
     void expandedToolOutputIsBoundedByAvailableTerminalRows() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(12);
         TuiViewModel view = new TuiViewModel(
             List.of(new TuiToolBlock(
                 "tool:bash",
                 "msg_1",
                 "toolu_bash",
                 "bash",
-                TuiToolState.DONE,
+                TuiToolState.RUNNING,
                 "mvn test",
                 String.join("\n", java.util.stream.IntStream.rangeClosed(1, 60)
                     .mapToObj(index -> "stdout: line " + index)
                     .toList()),
-                false
+                true
             )),
-            new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
+            statusBar("ses_1", "gpt-5.4", "execute", "default"),
             List.of(),
             Optional.empty(),
             Optional.empty()
         );
 
-        List<String> lines = renderer.renderFrame(
+        List<String> lines = renderFrame(
+            renderer,
             view,
-            screen,
             new TuiLayout(80, 12),
             "draft",
             5,
@@ -839,69 +1090,160 @@ class TuiRendererTest {
             true
         ).lines();
 
-        assertTrue(lines.size() <= 12, "expanded tool output should not exceed terminal height");
+        assertTrue(lines.size() <= 11, "expanded tool output should not exceed surface height");
         assertTrue(lines.stream().anyMatch(line -> line.contains("more lines") || line.contains("earlier lines")));
         assertTrue(lines.stream().anyMatch(line -> line.contains("> draft")));
         assertTrue(lines.stream().anyMatch(line -> line.contains("> /model")));
-        assertTrue(lines.getLast().contains("ses_1"));
+        assertTrue(lines.getLast().contains(STATUS_CWD));
+    }
+
+    @Test
+    void collapsedAndExpandedActiveToolFramesShareSurfaceBudget() {
+        String details = String.join("\n", java.util.stream.IntStream.rangeClosed(1, 100)
+            .mapToObj(index -> "detail line " + index)
+            .toList());
+        List<TuiBlock> tools = java.util.stream.IntStream.range(0, 10)
+            .mapToObj(index -> (TuiBlock) new TuiToolBlock(
+                "tool:" + index,
+                "msg_1",
+                "toolu_" + index,
+                "custom_tool",
+                TuiToolState.RUNNING,
+                "call " + index,
+                details,
+                true
+            ))
+            .toList();
+        TuiViewModel view = new TuiViewModel(
+            tools,
+            statusBar("ses_1", "gpt-5.4", "execute", "default"),
+            List.of(),
+            Optional.empty(),
+            Optional.empty()
+        );
+        TuiRenderer renderer = new TuiRenderer();
+
+        TuiRenderFrame collapsed = renderFrame(
+            renderer,
+            view,
+            new TuiLayout(80, 12),
+            "",
+            -1,
+            List.of(),
+            false
+        );
+        TuiRenderFrame expanded = renderFrame(
+            renderer,
+            view,
+            new TuiLayout(80, 12),
+            "",
+            -1,
+            List.of(),
+            true
+        );
+
+        assertFrameFitsHeightWithOmissionMarker(collapsed, 12);
+        assertFrameFitsHeightWithOmissionMarker(expanded, 12);
+    }
+
+    @Test
+    void narrowWrappedToolTitleStillLeavesAnOmissionMarkerWithinFiveRows() {
+        String details = String.join("\n", java.util.stream.IntStream.rangeClosed(1, 100)
+            .mapToObj(index -> "detail line " + index)
+            .toList());
+        TuiViewModel view = new TuiViewModel(
+            List.of(new TuiToolBlock(
+                "tool:custom",
+                "msg_1",
+                "toolu_custom",
+                "custom_tool",
+                TuiToolState.DONE,
+                "x".repeat(120),
+                details,
+                false
+            )),
+            statusBar("ses_1", "gpt-5.4", "execute", "default"),
+            List.of(),
+            Optional.empty(),
+            Optional.empty()
+        );
+        TuiRenderFrame frame = renderFrame(
+            new TuiRenderer(),
+            view,
+            new TuiLayout(20, 20),
+            "",
+            -1,
+            List.of(),
+            false
+        );
+
+        assertTrue(frame.lines().size() <= 19);
+        assertTrue(frame.lines().stream().anyMatch(line -> line.contains("more lines")));
+    }
+
+    private void assertFrameFitsHeightWithOmissionMarker(TuiRenderFrame frame, int height) {
+        assertTrue(frame.lines().size() <= height - 1);
+        assertTrue(frame.lines().stream()
+            .anyMatch(line -> line.contains("more lines") || line.contains("earlier lines")));
     }
 
     @Test
     void slashOverlayRendersBelowInputBlock() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(2);
         TuiViewModel view = new TuiViewModel(
             List.of(),
-            new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
+            statusBar("ses_1", "gpt-5.4", "execute", "default"),
             List.of(),
             Optional.empty(),
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(
+        List<String> lines = render(
+            renderer,
             view,
-            screen,
             new TuiLayout(40, 7),
             "/",
             1,
             List.of("> /model", "  /thinking", "  /compact")
         );
 
-        assertEquals(7, lines.size());
+        assertEquals(6, lines.size());
         assertInputBorder(lines.get(0), 40);
         assertInputContent(lines.get(1), "> /|CURSOR|" + INPUT_CURSOR);
-        assertInputBorder(lines.get(2), 40);
-        assertTrue(lines.get(3).startsWith("> /model"));
-        assertTrue(lines.get(4).contains("  /thinking"));
-        assertTrue(lines.get(5).contains("  /compact"));
-        assertTrue(lines.get(6).contains("ses_1"));
+        assertTrue(lines.get(2).startsWith("> /model"));
+        assertTrue(lines.get(3).contains("  /thinking"));
+        assertTrue(lines.get(4).contains("  /compact"));
+        assertTrue(lines.get(5).contains(STATUS_CWD));
     }
 
     @Test
     void overlayRendersBelowInputWithTranscriptContent() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(10);
         TuiViewModel view = new TuiViewModel(
             List.of(
                 new TuiMessageBlock("b1", "m1", "assistant", "hello", false),
                 new TuiMessageBlock("b2", "m2", "assistant", "world", false)
             ),
-            new StatusBarState("ses_1", "gpt-5.4", "ready", "default"),
+            statusBar("ses_1", "gpt-5.4", "ready", "default"),
             List.of(),
             Optional.empty(),
             Optional.empty()
         );
 
-        List<String> withOverlay = renderer.render(
-            view, screen, new TuiLayout(40, 10), "/", 1,
+        List<String> withOverlay = render(
+            renderer, view, new TuiLayout(40, 10), "/", 1,
             List.of("> /model", "  /thinking", "  /compact")
         );
 
-        List<String> withoutOverlay = renderer.render(
-            view, screen, new TuiLayout(40, 10), "/", 1
+        List<String> withoutOverlay = render(
+            renderer, view, new TuiLayout(40, 10), "/", 1
         );
 
-        assertEquals(withoutOverlay.size() + 3, withOverlay.size());
+        assertTrue(withOverlay.size() <= 9);
+        assertTrue(withoutOverlay.size() <= 9);
+        assertTrue(withOverlay.size() > withoutOverlay.size());
+        assertEquals(List.of("hello", "world"), withOverlay.subList(0, 2));
+        assertEquals(List.of("hello", "world"), withoutOverlay.subList(0, 2));
         int overlayIndex = -1;
         int inputBorderIndex = -1;
         for (int i = 0; i < withOverlay.size(); i++) {
@@ -920,24 +1262,117 @@ class TuiRendererTest {
     @Test
     void emptyOverlayProducesSameOutputAsNoOverlay() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen1 = new TuiScreen(5);
-        TuiScreen screen2 = new TuiScreen(5);
         TuiViewModel view = new TuiViewModel(
             List.of(new TuiMessageBlock("b1", "m1", "assistant", "test", false)),
-            new StatusBarState("ses_1", "gpt-5.4", "ready", "default"),
+            statusBar("ses_1", "gpt-5.4", "ready", "default"),
             List.of(),
             Optional.empty(),
             Optional.empty()
         );
 
-        List<String> withEmptyOverlay = renderer.render(
-            view, screen1, new TuiLayout(40, 8), "hello", 5, List.of()
+        List<String> withEmptyOverlay = render(
+            renderer, view, new TuiLayout(40, 8), "hello", 5, List.of()
         );
-        List<String> withoutOverlay = renderer.render(
-            view, screen2, new TuiLayout(40, 8), "hello", 5
+        List<String> withoutOverlay = render(
+            renderer, view, new TuiLayout(40, 8), "hello", 5
         );
 
         assertEquals(withoutOverlay, withEmptyOverlay);
+    }
+
+    private static StatusBarState statusBar(
+        String sessionId,
+        String model,
+        String mode,
+        String permissionMode
+    ) {
+        return new StatusBarState(
+            sessionId,
+            model,
+            mode,
+            permissionMode,
+            STATUS_CWD,
+            "",
+            "",
+            false
+        );
+    }
+
+    private List<String> render(
+        TuiRenderer renderer,
+        TuiViewModel view,
+        TuiLayout layout,
+        String input
+    ) {
+        return renderFrame(renderer, view, layout, input, -1).lines();
+    }
+
+    private List<String> render(
+        TuiRenderer renderer,
+        TuiViewModel view,
+        TuiLayout layout,
+        String input,
+        int cursor
+    ) {
+        return renderFrame(renderer, view, layout, input, cursor).lines();
+    }
+
+    private List<String> render(
+        TuiRenderer renderer,
+        TuiViewModel view,
+        TuiLayout layout,
+        String input,
+        int cursor,
+        List<String> overlayLines
+    ) {
+        return renderFrame(renderer, view, layout, input, cursor, overlayLines).lines();
+    }
+
+    private TuiRenderFrame renderFrame(
+        TuiRenderer renderer,
+        TuiViewModel view,
+        TuiLayout layout,
+        String input,
+        int cursor
+    ) {
+        return renderFrame(renderer, view, layout, input, cursor, List.of());
+    }
+
+    private TuiRenderFrame renderFrame(
+        TuiRenderer renderer,
+        TuiViewModel view,
+        TuiLayout layout,
+        String input,
+        int cursor,
+        List<String> overlayLines
+    ) {
+        return renderFrame(renderer, view, layout, input, cursor, overlayLines, false);
+    }
+
+    private TuiRenderFrame renderFrame(
+        TuiRenderer renderer,
+        TuiViewModel view,
+        TuiLayout layout,
+        String input,
+        int cursor,
+        List<String> overlayLines,
+        boolean toolOutputExpanded
+    ) {
+        TuiTranscriptPartition partition = new TuiTranscriptPartitioner().partition(view.blocks());
+        List<String> lines = new java.util.ArrayList<>();
+        renderer.renderCommittedBlocks(partition.history(), layout.width()).stream()
+            .map(TerminalLine::text)
+            .forEach(lines::add);
+        lines.addAll(renderer.renderSurface(
+            view,
+            partition.live(),
+            layout,
+            input,
+            cursor,
+            overlayLines,
+            toolOutputExpanded
+        ).lines());
+        return TuiRenderFrame.fromTextLines(lines);
     }
 
     private void assertInputBorder(String line, int width) {
@@ -947,5 +1382,31 @@ class TuiRendererTest {
 
     private void assertInputContent(String line, String content) {
         assertEquals(INPUT_BACKGROUND + content + ANSI_RESET, line);
+    }
+
+    private int indexOfContentSeparator(List<String> lines) {
+        for (int index = 0; index < lines.size(); index++) {
+            if (isContentSeparator(lines.get(index))) {
+                return index;
+            }
+        }
+        return -1;
+    }
+
+    private int indexOfLineContaining(List<String> lines, String content) {
+        for (int index = 0; index < lines.size(); index++) {
+            if (lines.get(index).contains(content)) {
+                return index;
+            }
+        }
+        return -1;
+    }
+
+    private int indexOfInputBorder(List<String> lines) {
+        return indexOfLineContaining(lines, "─");
+    }
+
+    private boolean isContentSeparator(String line) {
+        return line.contains("┄");
     }
 }
